# sqlfluff-extended-pack

./: .flake8  .gitignore  .pre-commit-config.yaml  .sqlfluff  .yamllint  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/custom_rules/: __init__.py
src/custom_rules/constraints/: CR01.py  CR02.py  CR03.py  CR04.py  CR05.py  __init__.py
src/custom_rules/functions/: FN01.py  FN02.py  __init__.py
src/custom_rules/views/: VW01.py  __init__.py
tests/: __init__.py  conftest.py  fixtures.py  test.sql  test_constraints.sql  test_functions.sql  test_views.sql
tests/custom_rules/: __init__.py
tests/custom_rules/constraints/: __init__.py  conftest.py  test_CR01.py  test_CR02.py  test_CR03.py  test_CR04.py  test_CR05.py  test_all_constraints.py
tests/custom_rules/functions/: __init__.py  conftest.py  test_FN01.py  test_FN02.py  test_all_functions.py
tests/custom_rules/views/: __init__.py  conftest.py  test_VW01.py  test_all_views.py
